--- a/publications.html
+++ b/publications.html
@@ -30,11 +30,11 @@
 
 <div id="content" style="width: 800px;">
 
-  <!--<h2>Preprints</h2>
+  <h2>Preprints</h2>
   <ul style="list-style: none;">
-    <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>]<br>
-    G. Bathie, P. Charalampopoulos, T. Starikovskaya.</li>
-  </ul>-->
+    <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/pdf/2506.04935">arxiv</a>]<br>
+    P. Bian, P. Charalampopoulos, L. A. K. Ayad, Manal Mohamed, S. P. Pissis, G. Loukides.</li>
+  </ul>
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
