--- a/teaching.html
+++ b/teaching.html
@@ -32,12 +32,12 @@
   <div class="sidebar">
     <img src="images/Panos.jpg" width=190px/>
     <h4>Address</h4>
-    School of Computing and Mathematical Sciences<br/>
-    Birkbeck, University of London<br/>
-    Malet Street<br/>
-    London WC1E 7HX<br/>
+    Department of Informatics<br/>
+    King's College London<br/>
+    Bush House, 30 Aldwych,<br/>
+    London, WC2B 4BG<br/>
     <h4>Email</h4>
-    p.charalampopoulos[at]bbk.ac.uk <br/>
+    p.charalampopoulos[at]kcl.ac.uk <br/>
   </div>
 
     <div id="content">
