--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,9 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-
+    <li><strong>Counting Distinct Square Substrings in Sublinear Time</strong><br>
+    P. Charalampopoulos, M. Mohamed, J. Radoszewski, W. Rytter, T. Walen, W. Zuba<br>
+    <a href="https://mfcs2025.mimuw.edu.pl/">MFCS 2025</a>.</li>
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.20">doi</a>] [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>] [<a href="slides/PM_HD_wildcards.pdf">slides</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>: 20:1-20:15.</li>
