--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,9 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Pattern Matching under Weighted Edit Distance</strong><br>
+    P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
+    <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
     <li><strong>Counting Distinct Square Substrings in Sublinear Time</strong><br>
     P. Charalampopoulos, M. Mohamed, J. Radoszewski, W. Rytter, T. Walen, W. Zuba<br>
     <a href="https://mfcs2025.mimuw.edu.pl/">MFCS 2025</a>.</li>
