--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <li><strong>Pattern Matching under Weighted Edit Distance</strong><br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
     <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
-    <li><strong>Counting Distinct Square Substrings in Sublinear Time</strong> [<a href="https://arxiv.org/abs/2508.03930">arxiv</a>] <br>
+    <li><strong>Counting Distinct Square Substrings in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.MFCS.2025.36">doi</a>] [<a href="https://arxiv.org/abs/2508.03930">arxiv</a>] <br>
     P. Charalampopoulos, M. Mohamed, J. Radoszewski, W. Rytter, T. Walen, W. Zuba<br>
     <a href="https://mfcs2025.mimuw.edu.pl/">MFCS 2025</a>.</li>
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.20">doi</a>] [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>] [<a href="slides/PM_HD_wildcards.pdf">slides</a>]<br>
