--- a/publications.html
+++ b/publications.html
@@ -30,20 +30,21 @@
 
 <div id="content" style="width: 800px;">
 
-  <h2>Preprints</h2>
+  <!--<h2>Preprints</h2>
   <ul style="list-style: none;">
-    <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/pdf/2506.04935">arxiv</a>]<br>
-    P. Bian, P. Charalampopoulos, L. A. K. Ayad, Manal Mohamed, S. P. Pissis, G. Loukides.</li>
-  </ul>
+  </ul>-->
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
     <li><strong>Pattern Matching under Weighted Edit Distance</strong><br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
     <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
+    <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/pdf/2506.04935">arxiv</a>]<br>
+    P. Bian, P. Charalampopoulos, L. A. K. Ayad, Manal Mohamed, S. P. Pissis, G. Loukides<br>
+    <a href="https://www3.cs.stonybrook.edu/~icdm2025/index.html">ICDM 2025</a>.</li>
     <li><strong>Counting Distinct Square Substrings in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.MFCS.2025.36">doi</a>] [<a href="https://arxiv.org/abs/2508.03930">arxiv</a>] <br>
     P. Charalampopoulos, M. Mohamed, J. Radoszewski, W. Rytter, T. Walen, W. Zuba<br>
-    <a href="https://mfcs2025.mimuw.edu.pl/">MFCS 2025</a>.</li>
+    <a href="https://mfcs2025.mimuw.edu.pl/">MFCS 2025</a>: 36:1-36:19.</li>
     <li><strong>Pattern Matching with Mismatches and Wildcards</strong> [<a href="https://doi.org/10.4230/LIPIcs.ESA.2024.20">doi</a>] [<a href="https://arxiv.org/abs/2402.07732">arxiv</a>] [<a href="slides/PM_HD_wildcards.pdf">slides</a>]<br>
     G. Bathie, P. Charalampopoulos, T. Starikovskaya<br>
     <a href="https://algo-conference.org/2024/esa/">ESA 2024</a>: 20:1-20:15.</li>
