--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
     <li><strong>On the Hardness of Computing the Edit Distance of Shallow Trees</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_21">doi</a>] [<a href="papers/Shallow_TED.pdf">pdf</a>] [<a href="slides/Shallow_TED.pdf">slides</a>]
     <br>P. Charalampopoulos, P. Gawrychowski, S. Mozes, O. Weimann<br>
     <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 290-302.</li>
-    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>] [<a href="papers/Subseq_covers.pdf">pdf</a>]
+    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1007/978-3-031-20643-6_1">doi</a>] [<a href="https://arxiv.org/abs/2509.05827">arxiv</a>]
     <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br>
     <a href="http://spire2022.inf.udec.cl/">SPIRE 2022</a>: 3-15. <b><font color="red">Best Paper Award</font></b></li>
     <li><strong>Faster Pattern Matching Under Edit Distance:</strong> [<a href="https://doi.org/10.1109/FOCS54457.2022.00072">doi</a>] [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>] [<a href="slides/PM_ED.pdf">slides</a>] [<a href="https://vimeo.com/user39621409/review/768767375/b33a5750bc">talk</a> at 42:50]
@@ -123,7 +123,7 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
-    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1016/j.tcs.2025.115216">doi</a>]
+    <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1016/j.tcs.2025.115216">doi</a>] [<a href="https://arxiv.org/abs/2509.05827">arxiv</a>]
     <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br> Theoretical Computer Science 1041: 115216 (2025).</li>
     <li><strong>Pattern Masking for Dictionary Matching: Theory and Practice</strong> [<a href="https://doi.org/10.1007/s00453-024-01213-8">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br>
       P. Charalampopoulos, H. Chen, P Christen, G. Loukides, N. Pisanti, S. P. Pissis, J. Radoszewski<br> Algorithmica 86: 1948–1978 (2024).</li>
