--- a/teaching.html
+++ b/teaching.html
@@ -44,21 +44,14 @@
         <br>
         <p><strong><a href="slides/Summer_school_slides_APM.pdf">Slides</a></strong> from my lectures on "Structural analysis of approximate pattern matching and algorithmic applications" at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a> organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.</p>
 
-        <h2>Birkbeck, University of London</h2>
-        <p>I am the module convenor for <strong><a href="https://www.bbk.ac.uk/courses/modules/buci/BUCI087H4">Software and Programming I</a></strong>.</p>
-      </div>
-
-    <div id="content">
         <h2>King's College London</h2>
-        Teaching Assistant:
-        <br></br>
-        <ul>
-          <li><strong>Elementary Logic with Applications</strong> (B.Sc. level): Small and Large Group Tutorials. (2017-2018)</li>
-          <li><strong>Foundations of Computing II</strong> (B.Sc. level): Small Group Tutorials. (2016-2017, 2017-2018)</li>
-          <li><strong>Foundations of Computing I</strong> (B.Sc. level): Small and Large Group Tutorials. (2016-2017, 2017-2018)</li>
-          <li><strong>Text Searching and Processing</strong> (B.Sc. & M.Sc. level): Large Group Tutorials. (2016-2017)</li>
-          <li><strong>Data Structures and their Implementation in C++</strong> (M.Sc. level): Large Group Tutorials. (2016-2017)</li>
-	     </ul>
+        <p><strong>Data Structures</strong>.</p>
+
+        <h2>Birkbeck, University of London</h2>
+        <p>I was the module convenor for Software and Programming I (2022-2025) and responsible for the graph colouring part of <strong>Problems in Mathematics</strong> (2025).</p>
+
+        <h2>King's College London</h2>
+        Teaching Assistant for <strong>Foundations of Computing II</strong>, <strong>Foundations of Computing I</strong>, <strong>Elementary Logic with Applications</strong>, <strong>Text Searching and Processing</strong>, and <strong>Data Structures and their Implementation in C++</strong>.
       </div>
       <strong>Associate Fellow of the <a href='https://www.heacademy.ac.uk/'>Higher Education Academy</a>.</strong>
     </div>
