--- a/teaching.html
+++ b/teaching.html
@@ -46,9 +46,9 @@
         <p><strong>4CCS1DST Data Structures</strong>: Semester 2, together with <a href='https://kohan.uk/'>David Kohan Marzagão</a>.</p>
 
         <h2>Other</h2>
-        <p><strong><a href="slides/Summer_school_slides_APM.pdf">Slides</a></strong> from my lectures on "Structural analysis of approximate pattern matching and algorithmic applications" at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a> organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.</p>
+        <p><strong><a href="slides/Summer_school_slides_APM.pdf">Slides</a></strong> from my lectures on "<strong>Structural analysis of approximate pattern matching and algorithmic applications</strong>" at the <a href="https://cpm2023.u-pem.fr/summer-school.html">summer school</a> organised by <a href="https://sites.google.com/a/cs.uni.wroc.pl/gawry/">Paweł Gawrychowski</a> and <a href="https://starikovskaya.github.io/homepage/">Tatiana Starikovskaya</a> at École normale supérieure in Paris just before <a href="https://cpm2023.u-pem.fr/index.html">CPM 2023</a>.</p>
 
-        <p>At Birkbeck, I was the module convenor for Software and Programming I (2022-2025) and responsible for the graph colouring part of <strong>Problems in Mathematics</strong> (2025).</p>
+        <p>At Birkbeck, I was the module convenor for <strong>Software and Programming I</strong> (2022-2025) and responsible for the graph colouring part of <strong>Problems in Mathematics</strong> (2025).</p>
 
         During my PhD studies at King's College London, I was a Teaching Assistant for <strong>Foundations of Computing II</strong>, <strong>Foundations of Computing I</strong>, <strong>Elementary Logic with Applications</strong>, <strong>Text Searching and Processing</strong>, and <strong>Data Structures and their Implementation in C++</strong>.
       </div>
