--- a/teaching.html
+++ b/teaching.html
@@ -50,9 +50,9 @@
 
         <p>At Birkbeck, I was the module convenor for <strong>Software and Programming I</strong> (2022-2025) and responsible for the graph colouring part of <strong>Problems in Mathematics</strong> (2025).</p>
 
-        During my PhD studies at King's College London, I was a Teaching Assistant for <strong>Foundations of Computing II</strong>, <strong>Foundations of Computing I</strong>, <strong>Elementary Logic with Applications</strong>, <strong>Text Searching and Processing</strong>, and <strong>Data Structures and their Implementation in C++</strong>.</p>
+        <p>During my PhD studies at King's College London, I was a Teaching Assistant for <strong>Foundations of Computing II</strong>, <strong>Foundations of Computing I</strong>, <strong>Elementary Logic with Applications</strong>, <strong>Text Searching and Processing</strong>, and <strong>Data Structures and their Implementation in C++</strong>.</p>
 
-        <strong>Associate Fellow of the <a href='https://www.heacademy.ac.uk/'>Higher Education Academy</a>.</strong>
+        <p><strong>Associate Fellow of the <a href='https://www.heacademy.ac.uk/'>Higher Education Academy</a>.</strong></p>
       </div>
     </div>
   </div>
