--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>Pattern Matching under Weighted Edit Distance</strong><br>
+    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/pdf/2510.17752">arxiv</a>]<br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
     <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
     <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/pdf/2506.04935">arxiv</a>]<br>
