--- a/publications.html
+++ b/publications.html
@@ -30,16 +30,18 @@
 
 <div id="content" style="width: 800px;">
 
-  <!--<h2>Preprints</h2>
+  <h2>Preprints</h2>
   <ul style="list-style: none;">
-  </ul>-->
+    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2511.01376">arxiv</a>]<br>
+    J. Zhou, B. Bals, M. Tinca, A. Guan, P. Charalampopoulos, G. Loukides, S. P. Pissis.</li>
+  </ul>
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/pdf/2510.17752">arxiv</a>]<br>
+    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>]<br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
     <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
-    <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/pdf/2506.04935">arxiv</a>]<br>
+    <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/abs/2506.04935">arxiv</a>]<br>
     P. Bian, P. Charalampopoulos, L. A. K. Ayad, Manal Mohamed, S. P. Pissis, G. Loukides<br>
     <a href="https://www3.cs.stonybrook.edu/~icdm2025/index.html">ICDM 2025</a>.</li>
     <li><strong>Counting Distinct Square Substrings in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.MFCS.2025.36">doi</a>] [<a href="https://arxiv.org/abs/2508.03930">arxiv</a>] <br>
@@ -123,6 +125,8 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
+    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
+    <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> ACM Transactions on Algorithms (to appear).</li>
     <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1016/j.tcs.2025.115216">doi</a>] [<a href="https://arxiv.org/abs/2509.05827">arxiv</a>]
     <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br> Theoretical Computer Science 1041: 115216 (2025).</li>
     <li><strong>Pattern Masking for Dictionary Matching: Theory and Practice</strong> [<a href="https://doi.org/10.1007/s00453-024-01213-8">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br>
