--- a/activities.html
+++ b/activities.html
@@ -22,7 +22,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="teaching.html">Teaching</a></li>
-          <li class="selected"><a href="activities.html">Research Activities</a></li>
+          <li class="selected"><a href="activities.html">Service</a></li>
         </ul>
       </div>
     </div>
@@ -43,19 +43,21 @@
 
 
   <h2>Program Committees and Editorial Work</h2>
-  <ul>
-        <li> I am a member of the editorial board of <a href="https://link.springer.com/journal/11786">Mathematics in Computer Science</a>.
-        <li> I am honoured to have served in the program committees of
-          <a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a>,
-          <a href="https://cpm2025.pangenome.eu/">CPM 2025</a>,
-          <a href="https://sites.google.com/view/spire-2025/home">SPIRE 2025</a>,
-          <a href="https://wabiconf.github.io/2025//">WABI 2025</a>,
-          <a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a>,
-          <a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A),
-          <a href="https://cpm2024.github.io/">CPM 2024</a>,
-          <a href="https://algo-conference.org/2024/wabi/">WABI 2024</a>,
-          <a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a>,
-          and <a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>.</li>
+
+    I am a member of the editorial board of <a href="https://link.springer.com/journal/11786">Mathematics in Computer Science</a> since March 2025.
+
+  I am honoured to serve or have served in the program committees of
+  <ul style="list-style: none;">
+    <li><a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a></li>
+    <li><a href="https://cpm2025.pangenome.eu/">CPM 2025</a></li>
+    <li><a href="https://sites.google.com/view/spire-2025/home">SPIRE 2025</a></li>
+    <li><a href="https://wabiconf.github.io/2025//">WABI 2025</a></li>
+    <li><a href="https://algo-conference.org/2024/waoa/">WAOA 2024</a></li>
+    <li><a href="https://algo-conference.org/2024/esa/">ESA 2024</a> (Track A)</li>
+    <li><a href="https://cpm2024.github.io/">CPM 2024</a></li>
+    <li><a href="https://algo-conference.org/2024/wabi/">WABI 2024</a></li>
+    <li><a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a></li>
+    <li><a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>.</li>
         <!--<li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
         <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
         <li>Member of the Organising Committee for the 16th International Symposium on Experimental Algorithms (<a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>).</li>
