--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li class="selected"><a href="index.html">Home</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="teaching.html">Teaching</a></li>
-          <li><a href="activities.html">Research Activities</a></li>
+          <li><a href="activities.html">Service</a></li>
         </ul>
       </div>
     </div>
