--- a/activities.html
+++ b/activities.html
@@ -44,9 +44,9 @@
 
   <h2>Program Committees and Editorial Work</h2>
 
-    I am a member of the editorial board of <a href="https://link.springer.com/journal/11786">Mathematics in Computer Science</a> since March 2025.
+  <p>I am a member of the editorial board of <a href="https://link.springer.com/journal/11786">Mathematics in Computer Science</a> since March 2025.</p>
 
-  I am honoured to serve or have served in the program committees of
+  <p>I am honoured to serve or have served in the program committees of
   <ul style="list-style: none;">
     <li><a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a></li>
     <li><a href="https://cpm2025.pangenome.eu/">CPM 2025</a></li>
@@ -63,7 +63,7 @@
         <li>Member of the Organising Committee for the 16th International Symposium on Experimental Algorithms (<a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>).</li>
         <li>Member of the Organising Committee for London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>).</li>
         <li>1st/2nd year Ph.D. students' Representative} in the Staff Student Liaison Committee, Department of Informatics, King's College London.</li>-->
-  </ul>
+  </ul></p>
 
   <!-- 
   <h2>Reviewing Duties</h2>
