--- a/publications.html
+++ b/publications.html
@@ -125,8 +125,8 @@
   <h2>Journal papers</h2>
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
-    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
-    <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> ACM Transactions on Algorithms (to appear).</li>
+    <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://doi.acm.org?doi=3774754">doi</a>] [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
+    <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> ACM Transactions on Algorithms.</li>
     <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1016/j.tcs.2025.115216">doi</a>] [<a href="https://arxiv.org/abs/2509.05827">arxiv</a>]
     <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br> Theoretical Computer Science 1041: 115216 (2025).</li>
     <li><strong>Pattern Masking for Dictionary Matching: Theory and Practice</strong> [<a href="https://doi.org/10.1007/s00453-024-01213-8">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br>
