--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
 
   <h2>Preprints</h2>
   <ul style="list-style: none;">
-    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2511.01376">arxiv</a>]<br>
+    <li><strong>Subtree Mode and Applications</strong> [<a href="https://arxiv.org/abs/2511.01376">arxiv</a>]<br>
     J. Zhou, B. Bals, M. Tinca, A. Guan, P. Charalampopoulos, G. Loukides, S. P. Pissis.</li>
   </ul>
 
