--- a/activities.html
+++ b/activities.html
@@ -46,7 +46,7 @@
 
   <p>I am a member of the editorial board of <a href="https://link.springer.com/journal/11786">Mathematics in Computer Science</a> since March 2025.</p>
 
-  <p>I am honoured to serve or have served in the program committees of
+  <p>I am honoured to serve or have served in the program committees of the following conferences.
   <ul style="list-style: none;">
     <li><a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a></li>
     <li><a href="https://cpm2025.pangenome.eu/">CPM 2025</a></li>
@@ -57,12 +57,7 @@
     <li><a href="https://cpm2024.github.io/">CPM 2024</a></li>
     <li><a href="https://algo-conference.org/2024/wabi/">WABI 2024</a></li>
     <li><a href="http://spire2023.isti.cnr.it/">SPIRE 2023</a></li>
-    <li><a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a>.</li>
-        <!--<li>Guest coeditor of the special issue <a href='https://content.iospress.com/journals/fundamenta-informaticae/163/3'>Fundam. Inform. 163(3) (2018)</a>.</li>
-        <li>Co-chair of the 2nd Student Conference on Mathematical Foundations in Bioinformatics (<a href='https://nms.kcl.ac.uk/informatics/events/MatBio2017/'>MatBio 2017</a>).</li>
-        <li>Member of the Organising Committee for the 16th International Symposium on Experimental Algorithms (<a href='https://nms.kcl.ac.uk/informatics/events/SEA2017/index.html'>SEA 2017</a>).</li>
-        <li>Member of the Organising Committee for London Stringology Days/London Algorithmic Workshop (<a href='http://www.inf.kcl.ac.uk/events/LSD&LAW17/'>LSD &amp; LAW 2017</a>).</li>
-        <li>1st/2nd year Ph.D. students' Representative} in the Staff Student Liaison Committee, Department of Informatics, King's College London.</li>-->
+    <li><a href="http://cpm2020.compute.dtu.dk/">CPM 2020</a></li>
   </ul></p>
 
   <!-- 
