--- a/publications.html
+++ b/publications.html
@@ -38,11 +38,14 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong><br>
+    P. Charalampopoulos, J. Ellert, M. Mohamed<br>
+    <a href="https://stacs2026.imag.fr">STACS 2026</a>.</li>
     <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>]<br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
     <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
     <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/abs/2506.04935">arxiv</a>]<br>
-    P. Bian, P. Charalampopoulos, L. A. K. Ayad, Manal Mohamed, S. P. Pissis, G. Loukides<br>
+    P. Bian, P. Charalampopoulos, L. A. K. Ayad, M. Mohamed, S. P. Pissis, G. Loukides<br>
     <a href="https://www3.cs.stonybrook.edu/~icdm2025/index.html">ICDM 2025</a>.</li>
     <li><strong>Counting Distinct Square Substrings in Sublinear Time</strong> [<a href="https://doi.org/10.4230/LIPIcs.MFCS.2025.36">doi</a>] [<a href="https://arxiv.org/abs/2508.03930">arxiv</a>] <br>
     P. Charalampopoulos, M. Mohamed, J. Radoszewski, W. Rytter, T. Walen, W. Zuba<br>
