--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,7 @@
     <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong><br>
     P. Charalampopoulos, J. Ellert, M. Mohamed<br>
     <a href="https://stacs2026.imag.fr">STACS 2026</a>.</li>
-    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>]<br>
+    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>] [<a href="https://phpre.github.io/slides/2025-FOCS.pdf">slides</a>]<br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
     <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
     <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/abs/2506.04935">arxiv</a>]<br>
