--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         
         <h4>Strings</h4>
         <ul style="list-style: none;">
-          <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>]<br>
+          <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>] [<a href="https://phpre.github.io/slides/2025-FOCS.pdf">slides</a>]<br>
           P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
           <a href="https://focs.computer.org/2025/">FOCS 2025</a>.</li>
           <li><strong>Faster Pattern Matching Under Edit Distance:</strong> [<a href="https://doi.org/10.1109/FOCS54457.2022.00072">doi</a>] [<a href="https://arxiv.org/abs/2204.03087">arxiv</a>] [<a href="slides/PM_ED.pdf">slides</a>] [<a href="https://vimeo.com/user39621409/review/768767375/b33a5750bc">talk</a> at 42:50]
