--- a/activities.html
+++ b/activities.html
@@ -48,6 +48,8 @@
 
   <p>I am honoured to serve or have served in the program committees of the following conferences.
   <ul style="list-style: none;">
+    <li><a href="https://algo-conference.org/2026/esa/">ESA 2026</a> (Track S)</li>
+    <li><a href="">MFCS 2026</a></li>
     <li><a href="https://mfcs2025.mimuw.edu.pl">MFCS 2025</a></li>
     <li><a href="https://cpm2025.pangenome.eu/">CPM 2025</a></li>
     <li><a href="https://sites.google.com/view/spire-2025/home">SPIRE 2025</a></li>
