--- a/publications.html
+++ b/publications.html
@@ -41,10 +41,10 @@
     <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong><br>
     P. Charalampopoulos, J. Ellert, M. Mohamed<br>
     <a href="https://stacs2026.imag.fr">STACS 2026</a>.</li>
-    <li><strong>Improved Bounds on the Maximum Number of Distinct Squares in Circular Words</strong> [<a href="https://doi.org/10.4230/LIPIcs.MFCS.2025.36">doi</a>] [<a href="https://arxiv.org/abs/2508.03930">arxiv</a>] <br>
+    <li><strong>Improved Bounds on the Maximum Number of Distinct Squares in Circular Words</strong> <br>
     P. Charalampopoulos, M. Mohamed, J. Radoszewski, W. Rytter, T. Walen, W. Zuba<br>
     <a href="https://cpm2026.compute.dtu.dk">CPM 2026</a>.</li>
-    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>] [<a href="https://phpre.github.io/slides/2025-FOCS.pdf">slides</a>]<br>
+    <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://doi.org/10.1109/FOCS63196.2025.00102">doi</a>] [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>] [<a href="https://phpre.github.io/slides/2025-FOCS.pdf">slides</a>]<br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
     <a href="https://focs.computer.org/2025/">FOCS 2025</a>: 1930-1938.</li>
     <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/abs/2506.04935">arxiv</a>]<br>
