--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong><br>
+    <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong><br> [<a href="https://arxiv.org/abs/2602.08570">arxiv</a>]
     P. Charalampopoulos, J. Ellert, M. Mohamed<br>
     <a href="https://stacs2026.imag.fr">STACS 2026</a>.</li>
     <li><strong>Improved Bounds on the Maximum Number of Distinct Squares in Circular Words</strong> <br>
@@ -132,7 +132,7 @@
   <!--<ol reversed> or <reversed ol>, </ol> for numbering-->
   <ul style="list-style: none;">
     <li><strong>Faster Algorithms for Longest Common Substring</strong> [<a href="https://dl.acm.org/doi/10.1145/3774754">doi</a>] [<a href="https://arxiv.org/abs/2105.03106">arxiv</a>]
-    <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> ACM Transactions on Algorithms.</li>
+    <br>P. Charalampopoulos, T. Kociumaka, S. P. Pissis, J. Radoszewski<br> ACM Transactions on Algorithms 22(2): 19:1-19:47 (2026).</li>
     <li><strong>Subsequence Covers of Words</strong> [<a href="https://doi.org/10.1016/j.tcs.2025.115216">doi</a>] [<a href="https://arxiv.org/abs/2509.05827">arxiv</a>]
     <br>P. Charalampopoulos, S. P. Pissis, J. Radoszewski, W. Rytter, T. Wale&#324, W. Zuba<br> Theoretical Computer Science 1041: 115216 (2025).</li>
     <li><strong>Pattern Masking for Dictionary Matching: Theory and Practice</strong> [<a href="https://doi.org/10.1007/s00453-024-01213-8">doi</a>] [<a href="https://arxiv.org/abs/2006.16137">arxiv</a>] <br>
