--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
-    <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong><br> [<a href="https://arxiv.org/abs/2602.08570">arxiv</a>]
+    <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong> [<a href="https://arxiv.org/abs/2602.08570">arxiv</a>]<br>
     P. Charalampopoulos, J. Ellert, M. Mohamed<br>
     <a href="https://stacs2026.imag.fr">STACS 2026</a>.</li>
     <li><strong>Improved Bounds on the Maximum Number of Distinct Squares in Circular Words</strong> <br>
