--- a/publications.html
+++ b/publications.html
@@ -30,14 +30,17 @@
 
 <div id="content" style="width: 800px;">
 
+  <!-- 
   <h2>Preprints</h2>
   <ul style="list-style: none;">
-    <li><strong>Subtree Mode and Applications</strong> [<a href="https://arxiv.org/abs/2511.01376">arxiv</a>]<br>
-    J. Zhou, B. Bals, M. Tinca, A. Guan, P. Charalampopoulos, G. Loukides, S. P. Pissis.</li>
   </ul>
+  -->
 
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
+    <li><strong>Subtree Mode and Applications</strong> [<a href="https://arxiv.org/abs/2511.01376">arxiv</a>]<br>
+    J. Zhou, B. Bals, M. Tinca, A. Guan, P. Charalampopoulos, G. Loukides, S. P. Pissis.
+    <a href="https://icde2026.github.io/">ICDE 2026</a>.</li>
     <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong> [<a href="https://arxiv.org/abs/2602.08570">arxiv</a>]<br>
     P. Charalampopoulos, J. Ellert, M. Mohamed<br>
     <a href="https://stacs2026.imag.fr">STACS 2026</a>.</li>
@@ -46,7 +49,7 @@
     <a href="https://cpm2026.compute.dtu.dk">CPM 2026</a>.</li>
     <li><strong>Pattern Matching under Weighted Edit Distance</strong> [<a href="https://doi.org/10.1109/FOCS63196.2025.00102">doi</a>] [<a href="https://arxiv.org/abs/2510.17752">arxiv</a>] [<a href="https://phpre.github.io/slides/2025-FOCS.pdf">slides</a>]<br>
     P. Charalampopoulos, T. Kociumaka, P. Wellnitz<br>
-    <a href="https://focs.computer.org/2025/">FOCS 2025</a>: 1930-1938.</li>
+    <a href="https://focs.computer.org/2025/">FOCS 2025</a>: 1927-1935.</li>
     <li><strong>Resilient Pattern Mining</strong> [<a href="https://arxiv.org/abs/2506.04935">arxiv</a>]<br>
     P. Bian, P. Charalampopoulos, L. A. K. Ayad, M. Mohamed, S. P. Pissis, G. Loukides<br>
     <a href="https://www3.cs.stonybrook.edu/~icdm2025/index.html">ICDM 2025</a>.</li>
