--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
   <h2>Conference papers</h2>
   <ul style="list-style: none;">
     <li><strong>Subtree Mode and Applications</strong> [<a href="https://arxiv.org/abs/2511.01376">arxiv</a>]<br>
-    J. Zhou, B. Bals, M. Tinca, A. Guan, P. Charalampopoulos, G. Loukides, S. P. Pissis.
+    J. Zhou, B. Bals, M. Tinca, A. Guan, P. Charalampopoulos, G. Loukides, S. P. Pissis<br>
     <a href="https://icde2026.github.io/">ICDE 2026</a>.</li>
     <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong> [<a href="https://arxiv.org/abs/2602.08570">arxiv</a>]<br>
     P. Charalampopoulos, J. Ellert, M. Mohamed<br>
