--- a/publications.html
+++ b/publications.html
@@ -41,8 +41,8 @@
     <li><strong>Subtree Mode and Applications</strong> [<a href="https://arxiv.org/abs/2511.01376">arxiv</a>]<br>
     J. Zhou, B. Bals, M. Tinca, A. Guan, P. Charalampopoulos, G. Loukides, S. P. Pissis<br>
     <a href="https://icde2026.github.io/">ICDE 2026</a>.</li>
-    <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong> [<a href="https://arxiv.org/abs/2602.08570">arxiv</a>]<br>
-    P. Charalampopoulos, J. Ellert, M. Mohamed<br>
+    <li><strong>Approximate Cartesian Tree Matching with Substitutions</strong> [<a href="https://doi.org/10.4230/LIPIcs.STACS.2026.26">doi</a>] [<a href="https://arxiv.org/abs/2602.08570">arxiv</a>]<br>
+    P. Charalampopoulos, J. Ellert, M. Mohamed<br> 
     <a href="https://stacs2026.imag.fr">STACS 2026</a>.</li>
     <li><strong>Improved Bounds on the Maximum Number of Distinct Squares in Circular Words</strong> <br>
     P. Charalampopoulos, M. Mohamed, J. Radoszewski, W. Rytter, T. Walen, W. Zuba<br>
